# tilelang-tt

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  README.md  V5_PASS_FIX_PLAN.md  check_block_sig.py  comprehensive_v5_fix.py  debug_ir_gemm.py  debug_pipeline.py  debug_runtime_plan.py  debug_shared_alloc.py  debug_shared_alloc2.py  debug_tile_dims.py  example_gemm_tt_minimal.py  fix_test_v5_passes.py  fix_tvm_imports.sh  fix_v5_passes_tvm_api.py  pyproject.toml  requirements-tenstorrent.txt  requirements-test.txt  requirements.txt  run_specific_tests.sh  setup.py  test_artifact_generation.py  test_detailed_check.py  test_intrinsic_names.py  test_matmul_codegen.py  test_pipeline_debug.py  test_shard_coords.py  test_v5_simple.py  tt.plan.json
.claude/: settings.json
.github/scripts/: verify_sdk_headers.py
.github/workflows/: amd_ci.yml  ci.yml  tenstorrent-ci.yml  tenstorrent-sdk-ci.yml
cmake/: FindMetalium.cmake  TTMetal.cmake
docs/tenstorrent/: A3_AttachTensorAccessorTT_Summary.md  ALTERNATIVE_SUBMODULE_APPROACH.md  CI.md  CI_AND_SCAFFOLDING.md  CI_FLOW_DIAGRAM.md  CODEGEN_FIX_PLAN.md  DOC_CLEANUP_PLAN.md  EXTERNAL_SDK_IMPLEMENTATION_PLAN.md  EXTERNAL_SDK_STATUS.md  GPU_vs_Tenstorrent.md  IR_DRIVEN_CODEGEN_PLAN.md  IR_LOWERING_ANALYSIS.md  IR_LOWERING_TASKS.md  IR_LOWERING_VALIDATION.md  LOWERING_ARCHITECTURE.md  METALIUM_API_ANALYSIS.md  METALIUM_FIX_PLAN.md  METALIUM_INTEGRATION_APPROACHES.md  METALIUM_INTEGRATION_PLAN.md  METALIUM_INVESTIGATION_SUMMARY.md  METALIUM_SDK_VALIDATION_PLAN.md  METALIUM_SETUP_GUIDE.md  MIGRATION_IMPLEMENTATION_CHECKLIST.md  MIGRATION_TO_NEW_ARCHITECTURE.md  MVP_PROGRESS_SUMMARY.md  NEW_LOWERING_ARCHITECTURE.md  NEXT_STEPS.md  PASS_TABLE.md  PASS_TABLE_SHARED.md  PASS_TABLE_TT.md  PATTERN_DETECTION_REFACTOR_PLAN.md  PHASE2_COMPLETION_PLAN.md  PHASE_STATUS_SUMMARY.md  Progress_Report_D3_D4_D5.md  README.md  RUNTIME_PLAN.md  SESSION_SUMMARY_2025-10-08.md  TASK6_TEST_UPDATES.md  TILELANG_TO_TT_EXAMPLES_PLAN.md  TIR_SPECIFICATIONS.md  (+12 more)
docs/tenstorrent/architecture/: GPU_vs_Tenstorrent_Analysis.md  IR_LOWERING_ANALYSIS.md  README.md  TT_ARCHITECTURE.md  v5_pipeline.md
docs/tenstorrent/archive/: CODEGEN_FIX_PLAN.md  README.md
docs/tenstorrent/codegen/: DST_DOUBLE_BUFFERING_SPEC.md  REFACTORING_COMPLETE.md  TEST_FIXES_REPORT.md  VISITOR_REFACTORING_PLAN.md
docs/tenstorrent/guides/: README.md  TIR_BASICS.md  TT_Python_Implementation_Quickstart.md
docs/tenstorrent/mvp/: MVP_PHASE2_PLAN.md
docs/tenstorrent/passes/: NEW_PIPELINE.md  README.md  grid_to_persistent_tt.md  infer_default_tt_schedule.md  infer_default_tt_shard.md  infer_layout_tt.md  infer_tt_layout.md  layout_aware_partition_tt.md  layout_aware_work_partition_tt.md  lower_gemm_to_tt_intrinsics.md  lower_to_sfpu.md  memory_space_lower_tt.md  propagate_layout_tt.md  tensorize_tt.md  tile_pad_tt.md  tt_shard_to_core_map.md  tt_tiles_to_core_map.md  verify_tt_ir.md
docs/tenstorrent/phases/: PHASE1_FOUNDATION_SPEC.md  PHASE2_OPTIMIZATIONS_SPEC.md  PHASE3_ADVANCED_SPEC.md  PHASE4_ATTENTION_SPEC.md  PHASE5_SPECIALIZED_SPEC.md  PHASE6_COMPLEX_SPEC.md  PHASES_STATUS.md
docs/tenstorrent/planning/: METALIUM_SDK_VALIDATION_PLAN.md  PHASE_1_FINDINGS.md  README.md  TT_BACKEND_TASKS.md  TT_Implementation_Plan.md  TT_Pass_Status.md  future-enhancements.md  sdk-validation-plan.md
docs/tenstorrent/reference/: PASS_TABLE_GPU.md  PASS_TABLE_SHARED.md  PASS_TABLE_TT.md  README.md  TT_RUNTIME_PLAN.schema.json  extracted_valuable_content_from_specifications.md
docs/tenstorrent/setup/: CI.md  METALIUM_SETUP_GUIDE.md  README.md
docs/tenstorrent/workstream1/: WS1_STATUS.md  ws1_target_registration.md
docs/tenstorrent/workstream2/: README.md  WS2_STATUS.md  ws2_python_integration.md  ws2_schedule_inference.md  ws2_shard_inference.md
docs/tenstorrent/workstream3/: WS3_STATUS.md
docs/tenstorrent/workstream4/: WS4_STATUS.md
docs/tenstorrent/workstream5/: WS5_STATUS.md
docs/tenstorrent/workstream7/: WS7_STATUS.md
examples/tenstorrent/: HOWTO_RUN_GEMM_WITH_TT.md  example_cast_fp32_bf16_tt.py  example_elementwise_add_tt.py  example_elementwise_multi_tt.py  example_flash_attention_tt.py  example_fp8_gemm_tt.py  example_gemm.py  example_gemm_cb_pipeline_tt.py  example_gemm_tt.py  example_gemm_tt_minimal.py  example_gemv_tt.py  example_matmul_tt_poc.py  example_moe_routing_tt.py  example_reduction_sum_tt.py  example_simple_gemm_tt.py  new_pipeline_example.py  run_gemm_with_tt_backend.py
generated_tt_kernels/: compute.cpp  output.txt  reader.cpp  tt.plan.json
maint/scripts/: local_build_and_test_tt.sh  verify_metalium_sdk.sh
src/transform/tenstorrent/: grid_to_persistent_tt.cc  infer_tt_schedule.cc  infer_tt_shard.cc  lower_to_sfpu.cc  tile_pad_tt.cc  verify_tt_ir.cc
src/transform/tt/: grid_to_persistent_tt.cc  infer_tt_schedule.cc  infer_tt_shard.cc  lower_gemm_to_tt_intrinsics.cc  memory_space_lower_tt.cc  tensorize_tt.cc  tile_pad_tt.cc  tt_shard_to_core_map.cc  tt_tiles_to_core_map.cc  verify_tt_ir.cc
testing/python/: tt.plan.json
testing/python/tenstorrent/: SKIPPED_TEST_ASSESSMENT.md  test_a3_attach_tensor_accessor.py  test_a3_simple.py  test_attr_constants_policy.py  test_block_transformer.py  test_codegen_compute_visitor.py  test_codegen_pipeline.py  test_codegen_reader_visitor.py  test_codegen_visitor_base.py  test_codegen_writer_visitor.py  (+28 more)
tilelang/cache/: kernel_cache.py
tilelang/engine/: BACKEND_INTERFACE.md  __init__.py  lower.py  target.py
tilelang/jit/: kernel.py
tilelang/tenstorrent/: __init__.py  annotations.py  attrs.py  codegen.py  compat.py  intrin.py  ir_sugar.py  passes.py  runtime_plan.py  target.py
tilelang/tt/: __init__.py  codegen.py  intrin.py  passes.py  target.py
tilelang/utils/: target.py
tt_artifacts_poc/: compute.cpp  main.cpp  reader.cpp  writer.cpp
tt_gemm_artifacts/: compute.cpp  main.cpp  reader.cpp  writer.cpp
tt_pass_ir/: 00_initial.tir  01_InferTTLayout.tir  02_PropagateTTLayout.tir  03_TTTilesToCoreMap.tir  04_LowerTTTileIntrinsics.tir  05_GridToPersistentTT.tir
(+98 files in other folders)
